# green-panel

./: .gitignore  Cargo.toml  LICENSE  README.md
admin/: index.html  legacy-assets-index.html.json
admin-panel/: .gitignore  jsconfig.json  package-lock.json  package.json  vue.config.js
admin-panel/public/: index.html
admin-panel/src/: App.vue  main.js
admin/css/: app.0bcf0a60.css  app.135d21e6.css  app.20796194.css  app.3b1e1304.css  app.49c6b23e.css  app.4f1956de.css  app.7574de82.css  app.8346efe1.css  app.c97d9d65.css  chunk-03a42f6e.af8c8a07.css  chunk-0662cae8.a986e06e.css  chunk-08c2f447.080819fa.css  chunk-0ad496d4.6e3735da.css  chunk-0b95907f.2d03c7b2.css  chunk-0d3b18a9.5e1d87e3.css  chunk-0d785518.23dbb656.css  chunk-0e9f76e3.cdacfb0f.css  chunk-10d286eb.bccef095.css  chunk-10daf114.6f02008a.css  chunk-10f7a124.613804a4.css  chunk-13852fb7.03b7d25a.css  chunk-13852fb7.6978cc61.css  chunk-199f59e4.d9c54313.css  chunk-1c22e32d.f111c5d9.css  chunk-20ee99be.6081b6cb.css  chunk-286e949c.f8e06541.css  chunk-2f2bbd95.cdaeb504.css  chunk-3707a175.a34ba17d.css  chunk-3b1bcdce.0e8f8e00.css  chunk-43f31f37.d262c662.css  chunk-44621ba8.33c38e54.css  chunk-471800fc.896cbbcc.css  chunk-4968d76e.47671b72.css  chunk-60cb63f6.9dcbd1c8.css  chunk-66c48726.151ac76b.css  chunk-6e7044b9.6b5310e0.css  chunk-748db79f.35e96c6d.css  chunk-79157d98.6fb39eb7.css  chunk-7a249206.e0a6d1ad.css  chunk-7adf9ecb.1f3b17cc.css  (+34 more)
admin/js/: app-legacy.01be1de0.js  app-legacy.01be1de0.js.map  app-legacy.0274dd5f.js  app-legacy.0274dd5f.js.map  app-legacy.0294f637.js  app-legacy.0294f637.js.map  app-legacy.038cac01.js  app-legacy.038cac01.js.map  app-legacy.0399a4c2.js  app-legacy.0399a4c2.js.map  app-legacy.03ae00b9.js  app-legacy.03ae00b9.js.map  app-legacy.03f69d5a.js  app-legacy.03f69d5a.js.map  app-legacy.043ab9a6.js  app-legacy.043ab9a6.js.map  app-legacy.04d40add.js  app-legacy.04d40add.js.map  app-legacy.04fefe90.js  app-legacy.04fefe90.js.map  app-legacy.05441dd4.js  app-legacy.05441dd4.js.map  app-legacy.0584f7a8.js  app-legacy.0584f7a8.js.map  app-legacy.05c9b9aa.js  app-legacy.05c9b9aa.js.map  app-legacy.0652d11d.js  app-legacy.0652d11d.js.map  app-legacy.065d0663.js  app-legacy.065d0663.js.map  app-legacy.06aa50ec.js  app-legacy.06aa50ec.js.map  app-legacy.086393c2.js  (+4174 more)
src/: main.rs  models.rs  services.rs  settings.rs  specific.rs  spices.rs
templates/: 404.html  base.html  index.html  sitemap.xml
tests/: regex_validate.rs
vue-admin-panel/: .eslintrc.js  .gitignore  README.md  jsconfig.json  package-lock.json  package.json  vue.config.js
web-admin/: index.html
(+474 files in other folders)
