[package]
authors = ["First_name Last_name <example@email.net>"]
description = "Some text"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "project-name"
readme = "README.md"
version = "0.1.0"

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-http = "2.2.1"
actix-multipart = "0.3.0"
actix-rt = "2.3.0"
actix-session = "0.4.1"
actix-web = "3.3.2"
base64 = "0.13.0"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.17"
humansize = "1.1.1"
mango-orm = "0.6.16"
metamorphose = "0.4.6"
recaptcha = "0.5.0"
regex = "1.5.4"
sanitize-filename = "0.3.0"
serde_json = "1.0.68"
uuid = "0.8.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.tera]
version = "1.13.0"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.2.3"
