[package]
authors = ["First_name Last_name <example@email.net>"]
description = "Some text"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "project-name"
readme = "README.md"
version = "0.1.0"

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-http = "3.1.0"
actix-multipart = "0.4.0"
actix-rt = "2.7.0"
actix-session = "0.4.1"
actix-web = "3.3.3"
base64 = "0.13.0"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.21"
humansize = "1.1.1"
mango-orm = "0.11.4"
metamorphose = "0.7.0"
recaptcha = "0.5.0"
regex = "1.5.6"
sanitize-filename = "0.4.0"
serde_json = "1.0.81"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.tera]
version = "1.16.0"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.2.5"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.1.2"
